Transfer zu Friend Of REDAXO

--- a/package.yml
+++ b/package.yml
@@ -1,7 +1,7 @@
 package: rex_redactor2
 version: '2.0.2'
-author: Thomas Kaegi
-supportpage: github.com/phoebusryan/rex_redactor2
+author: Friends Of REDAXO
+supportpage: github.com/FriendsOfREDAXO/rex_redactor2
 
 page:
     title: 'translate:title'
