--- a/package.yml
+++ b/package.yml
@@ -1,5 +1,5 @@
 package: redactor2
-version: '3.6.0'
+version: '4.0-dev'
 author: Friends Of REDAXO
 supportpage: github.com/FriendsOfREDAXO/redactor2
 
