--- a/package.yml
+++ b/package.yml
@@ -9,7 +9,7 @@ page:
     pjax: true
     subpages:
         profiles: { title: 'translate:profiles', perm: redactor2[profiles] }
-        help: { title: 'translate:Help', icon: rex-icon fa-info-circle, itemclass: pull-right}
+        help: { title: 'translate:help', icon: rex-icon fa-info-circle, itemclass: pull-right}
         
 requires:
     redaxo: '>=5.6'
